Finish deserialization